1/27/2025 ter
	Added support for conditional sandwich sums. Sandwich is defined by a pair of digits as normal, but the digits to be summed can be selected using any method from hanging sums. Available as an option for crust sandwich sudoku as well, where sandwich clues defined by crusts are filtered with the selection criteria. Added test case.
	Re-wrote max ascending clues to be more efficient (using the ORTools internal MaxEquality instead of rolling my own), and also more flexible. Now one can test the "length" of a run on either the number of digits, or the sum of the digits: e.g., 19 would be considered "longer" than 234 because it has a higher sum. Moreover, one can compare the value against either length or sum, independent of which is tested. Added test case.	

1/27/2025 bis
	Added support for hidden clones, and test case.

1/27/2025
	Added support for MaxMin Sum Cages, which provide the sum of the largest and smallest digits in the cage.
	Added test cases.

1/26/2025 ter
	Added additional test case, and fixed some bugs that arose from its incorporation.
	Implemented remote clone cell contraint, and added test case.

1/26/2025 bis
	Added support for conditional sum lines, the line version of hanging sums.
	Added new selection criterion for hanging sums: uniparity, where all odds or evens are chosen.
	The same bug from implementing lots reared its head a couple more times, smashed down again.
	Added test case.

1/26/2025
	Added support for copycat cells, and added a test case.
	Implementation discovered a bug in selection for hanging clues/lots which is fixed.

1/25/2025 bis
	Added support for Dutch flat mates, and a test case.

1/25/2025
	Reconfigured select and terminate criteria to unify code behind Parity, Modular, Entropy and Primality. Makes addition of
	any other digit classifications pretty straightforward.
	Implemented new selection criteria: 'ParityMatch' (and EntropyMatch...), and Unique Digits.
	Implemented support for lot lines (Issue #60) 
	